Changed the semicolumn to greater than

--- a/sormas-ui/src/main/webapp/VAADIN/themes/sormas/views/line-listing.scss
+++ b/sormas-ui/src/main/webapp/VAADIN/themes/sormas/views/line-listing.scss
@@ -6,7 +6,7 @@
     .width-auto {
         width: auto !important;
     }
-    div.v-slot-stripes>div:* {
+    div.v-slot-stripes>div > * {
         margin: 5px;
         padding: 5px;
     }
