--- a/sormas-app/app/src/main/res/layout/fragment_case_edit_layout.xml
+++ b/sormas-app/app/src/main/res/layout/fragment_case_edit_layout.xml
@@ -115,6 +115,14 @@
                         app:userEditRight="@{UserRight.CASE_CLASSIFY}"
                         style="@style/ControlFirstOfTwoColumnsStyle" />
 
+                    <de.symeda.sormas.app.component.controls.ControlTextEditField
+                        android:id="@+id/caseData_specifyOtherOutcome"
+                        app:required="false"
+                        app:value="@={data.specifyOtherOutcome}"
+                        app:userEditRight="@{UserRight.CASE_CLASSIFY}"
+                        style="@style/ControlFirstOfTwoColumnsStyle" />
+
+
                     <de.symeda.sormas.app.component.controls.ControlDateField
                         android:id="@+id/caseData_outcomeDate"
                         app:value="@={data.outcomeDate}"
