Added the fields to the read and edit layout sml file

--- a/sormas-app/app/src/main/res/layout/fragment_case_edit_layout.xml
+++ b/sormas-app/app/src/main/res/layout/fragment_case_edit_layout.xml
@@ -119,9 +119,12 @@
                         android:id="@+id/caseData_specifyOtherOutcome"
                         app:required="false"
                         app:value="@={data.specifyOtherOutcome}"
+                        app:softRequired="true"
+                        app:dependencyParentField="@{caseDataOutcome}"
+                        app:dependencyParentValue="@{CaseOutcome.OTHER}"
+                        app:dependencyParentVisibility="@{true}"
                         app:userEditRight="@{UserRight.CASE_CLASSIFY}"
-                        style="@style/ControlFirstOfTwoColumnsStyle" />
-
+                        style="@style/ControlSecondOfTwoColumnsStyle" />
 
                     <de.symeda.sormas.app.component.controls.ControlDateField
                         android:id="@+id/caseData_outcomeDate"
