--- a/sormas-app/app/src/main/res/layout/fragment_case_edit_hospitalization_layout.xml
+++ b/sormas-app/app/src/main/res/layout/fragment_case_edit_hospitalization_layout.xml
@@ -28,7 +28,9 @@
         <import type="de.symeda.sormas.api.utils.YesNoUnknown" />
         <import type="de.symeda.sormas.app.component.controls.ControlButtonType" />
         <import type="de.symeda.sormas.api.hospitalization.AccommodationType" />
+        <import type="de.symeda.sormas.api.utils.MildModerateSevereCritical" />
 
+        <variable name="condition" type="MildModerateSevereCritical" />
         <variable name="data" type="de.symeda.sormas.app.backend.hospitalization.Hospitalization" />
         <variable name="caze" type="de.symeda.sormas.app.backend.caze.Case" />
         <variable name="previousHospitalizationList" type="androidx.databinding.ObservableList&lt;de.symeda.sormas.app.backend.hospitalization.PreviousHospitalization&gt;" />
@@ -128,6 +130,20 @@
                     android:id="@+id/caseHospitalization_leftAgainstAdvice"
                     app:value="@={data.leftAgainstAdvice}"
                     style="@style/ControlSingleColumnStyle" />
+
+                <de.symeda.sormas.app.component.controls.ControlSpinnerField
+                    android:id="@+id/caseHospitalization_patientConditionOnAdmission"
+                    style="@style/ControlSingleColumnStyle"
+                    app:value="@={data.patientConditionOnAdmission}" />
+
+<!--                <de.symeda.sormas.app.component.controls.ControlTextEditField-->
+<!--                    android:id="@+id/caseHospitalization_patientConditionOnAdmission"-->
+<!--                    app:required="false"-->
+<!--                    app:value="@={data.caseHospitalization_patientConditionOnAdmission}"-->
+<!--                    app:softRequired="true"-->
+<!--                    app:dependencyParentVisibility="@{true}"-->
+<!--                    app:userEditRight="@{UserRight.CASE_CLASSIFY}"-->
+<!--                    style="@style/ControlSecondOfTwoColumnsStyle" />-->
 
                 <LinearLayout
                     android:layout_width="match_parent"
