--- a/sormas-app/app/src/main/res/layout/fragment_case_read_hospitalization_layout.xml
+++ b/sormas-app/app/src/main/res/layout/fragment_case_read_hospitalization_layout.xml
@@ -126,6 +126,11 @@
                     app:value="@{data.leftAgainstAdvice}"
                     style="@style/ControlSingleColumnStyle" />
 
+                <de.symeda.sormas.app.component.controls.ControlTextReadField
+                    android:id="@+id/caseHospitalization_patientConditionOnAdmission"
+                    app:value="@{data.patientConditionOnAdmission}"
+                    style="@style/ControlSingleColumnStyle" />
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
