Added the layout properties to the contact file, create, read and edit

--- a/sormas-app/app/src/main/res/layout/fragment_contact_new_layout.xml
+++ b/sormas-app/app/src/main/res/layout/fragment_contact_new_layout.xml
@@ -29,6 +29,7 @@
         <import type="de.symeda.sormas.api.i18n.Strings" />
 
         <variable name="data" type="de.symeda.sormas.app.backend.contact.Contact" />
+        <variable name="contactTransmissionClassificationClass" type="de.symeda.sormas.api.caze.TransmissionClassification" />
     </data>
 
     <ScrollView
@@ -49,6 +50,12 @@
                 app:value="@={data.reportDateTime}"
                 app:required="true"
                 style="@style/ControlSingleColumnStyle" />
+
+            <de.symeda.sormas.app.component.controls.ControlSpinnerField
+                android:id="@+id/contact_contactTransmissionClassification"
+                style="@style/ControlSingleColumnStyle"
+                app:required="true"
+                app:value="@={data.contactTransmissionClassification}" />
 
             <de.symeda.sormas.app.component.controls.ControlTextEditField
                 android:id="@+id/person_firstName"
