--- a/sormas-app/app/src/main/res/layout/fragment_contact_read_layout.xml
+++ b/sormas-app/app/src/main/res/layout/fragment_contact_read_layout.xml
@@ -34,6 +34,7 @@
 
         <variable name="data" type="de.symeda.sormas.app.backend.contact.Contact"/>
         <variable name="caze" type="de.symeda.sormas.app.backend.caze.Case"/>
+        <variable name="contactTransmissionClassificationClass" type="de.symeda.sormas.api.caze.TransmissionClassification" />
     </data>
 
     <ScrollView
@@ -75,6 +76,17 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
+                        <de.symeda.sormas.app.component.controls.ControlTextReadField
+                            android:id="@+id/contact_contactTransmissionClassification"
+                            app:value="@{data.contactTransmissionClassification}"
+                            style="@style/ControlFirstOfTwoColumnsStyle" />
+                </LinearLayout>
+                <ImageView style="@style/FullHorizontalDividerStyle"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
                     <de.symeda.sormas.app.component.controls.ControlTextReadField
                         android:id="@+id/contact_externalID"
@@ -86,7 +98,7 @@
                         app:value="@{data.disease}"
                         app:appendValue="@{data.diseaseDetails}"
                         app:valueFormat="@string/two_strings_with_hyphen_format"
-                        style="@style/ControlSecondOfTwoColumnsStyle" />
+                        style="@style/ControlFirstOfTwoColumnsStyle" />
 
                 </LinearLayout>
 
