--- a/sormas-app/app/src/main/res/layout/fragment_contact_edit_layout.xml
+++ b/sormas-app/app/src/main/res/layout/fragment_contact_edit_layout.xml
@@ -37,6 +37,8 @@
 
         <variable name="data" type="de.symeda.sormas.app.backend.contact.Contact"/>
         <variable name="caze" type="de.symeda.sormas.app.backend.caze.Case"/>
+        <variable name="contactTransmissionClassificationClass" type="de.symeda.sormas.api.caze.TransmissionClassification" />
+
     </data>
 
     <ScrollView
@@ -73,6 +75,12 @@
                         style="@style/ControlSecondOfTwoColumnsStyle" />
 
                 </LinearLayout>
+
+                <de.symeda.sormas.app.component.controls.ControlSpinnerField
+                    android:id="@+id/contact_contactTransmissionClassification"
+                    style="@style/ControlSingleColumnStyle"
+                    app:required="true"
+                    app:value="@={data.contactTransmissionClassification}" />
 
                 <de.symeda.sormas.app.component.controls.ControlTextEditField
                     android:id="@+id/contact_externalID"
