--- a/sormas-app/app/src/main/res/layout/fragment_case_new_layout.xml
+++ b/sormas-app/app/src/main/res/layout/fragment_case_new_layout.xml
@@ -28,7 +28,7 @@
 
         <variable name="data" type="de.symeda.sormas.app.backend.caze.Case" />
         <variable name="caseOriginClass" type="Class" />
-        <variable name="caseTransmissionClassificationClass" type="Class" />
+        <variable name="caseTransmissionClassificationClass" type="de.symeda.sormas.api.caze.TransmissionClassification" />
     </data>
 
 
