--- a/sormas-app/app/src/main/res/layout/fragment_case_read_hospitalization_layout.xml
+++ b/sormas-app/app/src/main/res/layout/fragment_case_read_hospitalization_layout.xml
@@ -24,6 +24,7 @@
 
     <data>
         <import type="de.symeda.sormas.api.utils.YesNoUnknown" />
+        <import type="de.symeda.sormas.api.caze.CaseOutcome" />
 
         <variable name="data" type="de.symeda.sormas.app.backend.hospitalization.Hospitalization" />
         <variable name="caze" type="de.symeda.sormas.app.backend.caze.Case" />
@@ -95,10 +96,28 @@
 
                 </LinearLayout>
 
+
+                <de.symeda.sormas.app.component.controls.ControlTextReadField
+                    android:id="@+id/caseData_outcome"
+                    app:value="@{caze.outcome}"
+                    dependencyParentField="@{caseHospitalizationDischargeDate}"
+                    dependencyParentValue="@{data.dischargeDate}"
+                    app:dependencyParentVisibility="@{true}"
+                    style="@style/ControlSingleColumnStyle" />
+
+                <de.symeda.sormas.app.component.controls.ControlTextReadField
+                    android:id="@+id/caseData_specifyOtherOutcome"
+                    app:value="@{caze.specifyOtherOutcome}"
+                    app:dependencyParentField="@{caseDataOutcome}"
+                    app:dependencyParentValue="@{CaseOutcome.OTHER}"
+                    app:dependencyParentVisibility="@{true}"
+                    style="@style/ControlSingleColumnStyle" />
+
                 <de.symeda.sormas.app.component.controls.ControlTextReadField
                     android:id="@+id/caseHospitalization_intensiveCareUnit"
                     app:value="@{data.intensiveCareUnit}"
                     style="@style/ControlSingleColumnStyle" />
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
