--- a/sormas-app/app/src/main/res/layout/fragment_case_edit_layout.xml
+++ b/sormas-app/app/src/main/res/layout/fragment_case_edit_layout.xml
@@ -39,6 +39,7 @@
         <import type="de.symeda.sormas.api.caze.HospitalWardType" />
         <import type="de.symeda.sormas.api.contact.QuarantineType" />
 
+        <variable name="hosp" type="de.symeda.sormas.app.backend.hospitalization.Hospitalization" />
         <variable name="data" type="de.symeda.sormas.app.backend.caze.Case"/>
         <variable name="yesNoUnknownClass" type="Class" />
         <variable name="vaccinationClass" type="Class" />
@@ -104,14 +105,16 @@
                         style="@style/ControlSingleColumnStyle"/>
 
                 <LinearLayout
-                        android:layout_width="match_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:visibility="gone"
+                    android:orientation="horizontal" android:id="@+id/outcomeCaseLayout">
 
                     <de.symeda.sormas.app.component.controls.ControlSpinnerField
                         android:id="@+id/caseData_outcome"
                         app:required="true"
                         app:value="@={data.outcome}"
+                        app:dependencyParentVisibility="@{true}"
                         app:userEditRight="@{UserRight.CASE_CLASSIFY}"
                         style="@style/ControlFirstOfTwoColumnsStyle" />
 
@@ -125,6 +128,12 @@
                         app:dependencyParentVisibility="@{true}"
                         app:userEditRight="@{UserRight.CASE_CLASSIFY}"
                         style="@style/ControlSecondOfTwoColumnsStyle" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
                     <de.symeda.sormas.app.component.controls.ControlDateField
                         android:id="@+id/caseData_outcomeDate"
